--- a/Cyborg/Handbook.html
+++ b/Cyborg/Handbook.html
@@ -63,7 +63,7 @@
 <p><h3><a class='anchor' name='Module%20Outcomes'>Module Outcomes</a></h3>
 
 <p>By the end of the taught part of the project all students should:<ul>
-<li>understand basics theoretical, historical, critical and technical aspects of computation, creativity and computer music and their relationship to human-machine co-creativity.<li>have the ability to apply human-machine co-creativity concepts in creative and technical projects.<li>have basic programming skills including using, writing and repurposing code.</ul>
+<li>understand basic theoretical, historical, critical and technical aspects of computation, creativity and computer music and their relationship to human-machine co-creativity.<li>have the ability to apply human-machine co-creativity concepts in creative and technical projects.<li>have basic programming skills including using, writing and repurposing code.</ul>
 <h3><a class='anchor' name='Prerequisites'>Prerequisites</a></h3>
 
 <p>Students should have basic computer literacy and own or have access to a computer, be willing to engage with numerical and conceptual approaches to music and creativity, and be prepared to use technology and do basic computer programming.<h3><a class='anchor' name='Flipped%20classroom'>Flipped classroom</a></h3>
@@ -96,25 +96,28 @@
 <li><strong>Presentation (10%)</strong>: Tuesday 15 and Friday 18 February 2022 (in-class)<li><strong>Portfolio (70%)</strong>: Monday, 18 April 2022 before 16:00.<li><strong>Portfolio Documentation (20%)</strong>: Monday, 18 April 2022 before 16:00.</ul>
 <h3><a class='anchor' name='Submission'>Submission</a></h3>
 
-<p>You will submit your work through our online submission system via the <a href="https://deposit.york.ac.uk/">Deposit Service</a>. This will include all of the files for the Portfolio (code and supporting materials) and PDF files containing the Portfolio Documentation. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
-<p>You must create your zipped folder before using the Deposit Service.
-<p>Your zipped file should be named in the following format:
-<p><strong>ExamNumber_ModuleTitle</strong>
-<p>For example, your file name might look like: <strong>Y1234567_CyborgMusic</strong>.
-<p>Please include your exam number (and not your name) in the name of each document you include in your zipped file. For example, <strong>Y1234567_code</strong>.
-<p>To use the Deposit Service, you need to submit all your work as a zipped folder. You must create this before using the Deposit Service.
-<p>For a detailed explanation of how to submit your work please read the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission%2019_20.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
+<p>You will submit your Portfolio and Portfolio Documentation through our online submission system via the <a href="https://www.york.ac.uk/it-services/services/deposit/">Deposit Service</a>. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the appearance and presentation of your work.
+<p>You must create your zipped folder before using the Deposit Service. Your ZIP folder should include the following:<ul>
+<li><a href="./../Cyborg/Assignments/Portfolio.html">Portfolio</a><li>PDF of the <a href="./../Cyborg/Assignments/Portfolio Documentation.html">Portfolio Documentation</a>.<li>Supporting materials, such as code, files, external libraries, etc. (it's not necessary to include DAW projects).</ul>
+
+<p>For information on how to create a zipped folder please refer to the <a href="https://docs.google.com/document/d/1R1_RlB8FwJqjPXdrbxcEF2crJFd_hAqA2030Lm-_mh0/edit?usp=sharing">Submission Guide</a>.
+<p>You must name your work as follows: ZIP folder name: ExamNumber_Module (e.g. Y3812345_Cyborg) File name(s): ExamNumber_AssessmentTask (e.g. Y3812345_Portfolio)
+<p>Send your work to Music using the email address <a href="./../music-submissions@york.ac.uk">music-submissions@york.ac.uk</a>.
+<p>You can submit as many times as you like before the deadline. Submissions are collected automatically. Only the last submission before the deadline will be forwarded for marking.
+<p>If you experience exceptional circumstances, and as a result you are unable to submit by the deadline, you may request extra time. For this assessment you have two options. 1. You may self certify (request a 4 day extension) via the self certification task in eVision. You will receive email confirmation of the new deadline after the original deadline has passed. For more information refer to the exceptional circumstance web page (link below). 2. If you need more time, or if you are applying after the deadline, you should use the exceptional circumstances route (click the pink link at the bottom of the exceptional circumstances webpage). Please read the information in your Handbook about exceptional circumstances before making an application.
+<p>If you are granted an extension you should submit via the Deposit Service by your extended deadline.
+<p>For detailed guidance on how to submit please refer to our <a href="https://docs.google.com/document/d/1R1_RlB8FwJqjPXdrbxcEF2crJFd_hAqA2030Lm-_mh0/edit?usp=sharing">Submission Guide</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
-<p><strong>Library</strong>: You will be expected to research and write a portfolio documentation for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the library website. You can reach the website here: <a href="http://www.york.ac.uk/library/">http://www.york.ac.uk/library/</a>.
-<p>E-resources include a large collection of useful e-journal articles and e-books as well as other great music resources including streamable audio and video, electronic scores and databases that you can find here: <a href="http://subjectguides.york.ac.uk/c.php?g=484041&p=3547049.">http://subjectguides.york.ac.uk/c.php?g=484041&amp;p=3547049.</a>
+<p><strong>Library</strong>: You will be expected to research and write a portfolio documentation for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the <a href="http://www.york.ac.uk/library/">library website</a>.
+<p>E-resources include a large collection of useful e-journal articles and e-books as well as other great music resources including streamable audio and video, electronic scores and databases that you can find <a href="http://subjectguides.york.ac.uk/c.php?g=484041&p=3547049">here</a>.
 <p><strong>Software</strong>: For this module, you will engage with a variety of software, including SuperCollider, Wekinator, Magenta Demos and other music and audio software.
 <p><strong>SuperCollider</strong>
-<p>In this module, you'll learn how to work with the SuperCollider programming language. SuperCollider is free and you can download the latest version here: <a href="http://supercollider.github.io/download">http://supercollider.github.io/download</a>.
+<p>In this module, you'll learn how to work with the SuperCollider programming language. SuperCollider is free and you can download the latest version <a href="http://supercollider.github.io/download">here</a>.
 <p>Once you download SuperCollider, you can access the module material by copying and pasting this line of code into a SuperCollider document:<pre class='code prettyprint lang-sc'>HelpBrowser.goTo("https://freuben.github.io/york/Cyborg");</pre>
 
 <p>Then, evaluate this code by putting the cursor on the same line and then pressing <em>shift+return</em>. If you don't want to do this every time you want to access the material and want the material to be there when you start SuperCollider, then go to: <em>File-&gt;Open startup file</em> and paste the code there and save the file. Next time you open SuperCollider, the materials will be there!
-<p>You should also download and install the Synthesis Plugins and Extensions here: <a href="https://github.com/supercollider/sc3-plugins/releases">https://github.com/supercollider/sc3-plugins/releases</a>.
+<p>You should also download and install the <a href="https://github.com/supercollider/sc3-plugins/releases">Synthesis Plugins and Extensions</a>.
 <p>For quick installation of the plugins in Mac, evaluate each line of code individually in SuperCollider:<pre class='code prettyprint lang-sc'>"open https://github.com/supercollider/sc3-plugins/releases/download/Version-3.8.0/sc3-plugins_OSX_SC3.8_692f92f.zip".unixCmd; //download current version of sc-plugins for mac
 ("open " ++ "~/Downloads/sc3-plugins_OSX_SC3.8_692f92f.zip".standardizePath.shellQuote).unixCmd;
 //open zip file
@@ -126,9 +129,9 @@
 <p>Additionally, you might want to install some third-party packages called <a href="./../Classes/Quarks.html">Quarks</a>.
 <p>Go to <a href="./../Cyborg/Handbook.html#SuperCollider%20Links">SuperCollider Links</a> for code examples and other interesting information.
 <p><strong>Wekinator</strong>
-<p>You can download Wekinator here: <a href="http://www.wekinator.org/downloads/">http://www.wekinator.org/downloads/</a>
+<p>You can download Wekinator <a href="http://www.wekinator.org/downloads/">here</a>.
 <p><strong>Magenta Demos</strong>
-<p>You can use and download the Magenta Demos here: <a href="https://magenta.tensorflow.org/demos/">https://magenta.tensorflow.org/demos/</a>
+<p>You can use and download the Magenta Demos <a href="https://magenta.tensorflow.org/demos/">here</a>.
 <p><strong>Other music and audio software</strong>
 <p>You might also want to use other software applications for music and audio in this module.
 <p>Here are some suggestions of software you might want to use:<ul>
