added bold to assessment

--- a/Cyborg/Handbook.html
+++ b/Cyborg/Handbook.html
@@ -102,10 +102,11 @@
 
 <p>For information on how to create a zipped folder please refer to the <a href="https://docs.google.com/document/d/1R1_RlB8FwJqjPXdrbxcEF2crJFd_hAqA2030Lm-_mh0/edit?usp=sharing">Submission Guide</a>.
 <p>You must name your work as follows: ZIP folder name: ExamNumber_Module (e.g. Y3812345_Cyborg) File name(s): ExamNumber_AssessmentTask (e.g. Y3812345_Portfolio)
-<p>Send your work to Music using the email address <a href="./../music-submissions@york.ac.uk">music-submissions@york.ac.uk</a>.
+<p><strong>Send your work to Music using the email address</strong>: <a href="./../music-submissions@york.ac.uk">music-submissions@york.ac.uk</a>.
 <p>You can submit as many times as you like before the deadline. Submissions are collected automatically. Only the last submission before the deadline will be forwarded for marking.
 <p>If you experience exceptional circumstances, and as a result you are unable to submit by the deadline, you may request extra time. For this assessment you have two options. 1. You may self certify (request a 4 day extension) via the self certification task in eVision. You will receive email confirmation of the new deadline after the original deadline has passed. For more information refer to the exceptional circumstance web page (link below). 2. If you need more time, or if you are applying after the deadline, you should use the exceptional circumstances route (click the pink link at the bottom of the exceptional circumstances webpage). Please read the information in your Handbook about exceptional circumstances before making an application.
 <p>If you are granted an extension you should submit via the Deposit Service by your extended deadline.
+<p><strong>Please allow plenty of time to upload your work</strong>, especially if you submit from off campus. Check you are submitting your final version.
 <p>For detailed guidance on how to submit please refer to our <a href="https://docs.google.com/document/d/1R1_RlB8FwJqjPXdrbxcEF2crJFd_hAqA2030Lm-_mh0/edit?usp=sharing">Submission Guide</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
