almost done with intro

--- a/Cyborg/Seminars/Computation and Music.html
+++ b/Cyborg/Seminars/Computation and Music.html
@@ -22,7 +22,20 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a>, <a href="./../../Cyborg/Seminars/Introduction to Cyborg Music.html">Introduction to Cyborg Music</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.001.png'/><br><b>CSIRAC with Trevor Pearcey</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
+
+<p><pre class='code prettyprint lang-sc'>"open http://theconversation.com/how-australia-played-the-worlds-first-music-on-a-computer-60381".unixCmd;</pre>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.002.png'/><br><b>CSIRAC with Trevor Pearcey - computerhistory.org</b></div>
+
+<p>Calculate how many years since the first computer produced music. Run the code below by pressing shift+return<pre class='code prettyprint lang-sc'>10.do{((Date.getDate.year - 1951).asString ++ " YEARS OF COMPUTER MUSIC!!!").postln};</pre>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.003.png'/></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.004.png'/><br><b>From Ada: the Enchantress of Numbers (Toole, B., 1998)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.001.png'/><br><b>CSIRAC with Trevor Pearcey</b></div>
 
 <p><pre class='code prettyprint lang-sc'>"open https://theconversation.com/how-australia-played-the-worlds-first-music-on-a-computer-60381".unixCmd;</pre>
 
@@ -45,12 +58,6 @@
 //First historical recording of computer music at the University of Manchester
 "open https://youtu.be/xLwjz0UR5_A".unixCmd;</pre>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.007.png'/><br><b>Alan Turing</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.008.png'/><br><b>Benedict Cumberbatch as Alan Turing in The Imitation Game</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.009.png'/><br><b>Claude E. Shannon</b></div>
-
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.010.png'/><br><b>Bell Laboratories</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.011.png'/><br><b>Bell Laboratories interior, Eero Saarinen (Architect)</b></div>
@@ -68,10 +75,13 @@
 
 <p><pre class='code prettyprint lang-sc'>//Max Mathews, Numerology, 1960
 "open https://youtu.be/hVmbthBYFaw".unixCmd;</pre>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.016.png'/><br><b>IBM 704 - cs.princeton.edu</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.017.png'/><br><b>IBM 704 Operator Console - computer-history.info</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.018.png'/><br><b>IBM 704 in use - flickr.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.016.png'/><br><b>IBM 704</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/SSfMT/Lectures/Lecture4/Lecture4.017.png'/><br><b>IBM 704</b></div>
 
 <p><pre class='code prettyprint lang-sc'>//Daisy Bell (Bicycle Built for Two), 1961
 //Synthesised voice: John L. Kelly, Carol Lockbaum, et al.
