--- a/Cyborg/Seminars/Introduction to Cyborg Music.html
+++ b/Cyborg/Seminars/Introduction to Cyborg Music.html
@@ -22,23 +22,27 @@
 <div id='related'>See also: <a href="./../../Cyborg.html">Cyborg Music</a></div>
 </div>
 <div id='toc'>
-<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.001.png'/><br><b>CSIR Mk 1 (1951) - csiropedia.csiro.au</b></div>
+<ul class='toc'></ul></div><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.001.png'/><br><b>Humani Victus Instrumenta (The Instruments of Human Sustenance), Giuseppe Arcimboldo (ca. 1527)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.002.png'/><br><b>Darth Vader, Start Wars original trilogy (1977-1983)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.003.png'/><br><b>RoboCop (1987)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.004.png'/><br><b>Ilustration of "No Woman Born" (1944), in cover of The Best of C.L. Moore</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.005.png'/><br><b>"After a Judgment Day" (1962) by Edmond Hamilton,</b></div>
 
-<p><pre class='code prettyprint lang-sc'>"open http://theconversation.com/how-australia-played-the-worlds-first-music-on-a-computer-60381".unixCmd;</pre>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.006.png'/><br><b>Cyborg (1972) by Martin Caidin</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.002.png'/><br><b>CSIRAC with Trevor Pearcey - computerhistory.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.007.png'/><br><b>RoboCop (1987)</b></div>
 
-<p>Calculate how many years since the first computer produced music. Run the code below by pressing shift+return<pre class='code prettyprint lang-sc'>10.do{((Date.getDate.year - 1951).asString ++ " YEARS OF COMPUTER MUSIC!!!").postln};</pre>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.008.png'/><br><b>A group of people playing a Virtual Reality (VR) shooting game</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.003.png'/></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.009.png'/><br><b>Les Baugh testing a robotic prosthetic - nytimes.com</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.004.png'/><br><b>From Ada: the Enchantress of Numbers (Toole, B., 1998)</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.010.png'/><br><b>Cyborg Evolution</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/KBuJqUfO4-w".unixCmd; //short documentary on Difference Engine</pre>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.005.png'/><br><b>Ada Lovelace - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.006.png'/><br><b>Charles Babbage's plans for the Analytical Engine - computerhistory.org</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.007.png'/><br><b>Only part of the Analytical Engine to be completed in Babbage's life - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.008.png'/><br><b>The Thrilling Adventures of Lovelace and Babbage by Sydney Padua</b></div>
 
@@ -49,29 +53,27 @@
 <p><pre class='code prettyprint lang-sc'>"open https://youtu.be/OlJns3fPItE".unixCmd;
 "open https://youtu.be/shh1F6MgjV4".unixCmd;</pre>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.010.png'/><br><b>Reconstruction of Difference Engine 2 by Science Museum (1984-2002) - computerhistory.org</b></div>
-
-<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/KBuJqUfO4-w".unixCmd; //short documentary on Difference Engine</pre>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.007.png'/><br><b>Only part of the Analytical Engine to be completed in Babbage's life - wikipedia.org</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.011.png'/><br><b>Konrad Zuse's Z3 electro-mechanical computer (1941) - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.012.png'/><br><b>Colossus Computer (1943) by Tommy Flowers- wikipedia.org</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.011.png'/><br><b>Alan Turing</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.013.png'/><br><b>Harwell CADET (1953) - wikipedia.org</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.012.png'/><br><b>Benedict Cumberbatch as Alan Turing in The Imitation Game</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.013.png'/><br><b>Alan Turing</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.015.png'/><br><b>Turing Test</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.014.png'/><br><b>Turing Test in Ex Machina (2015)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.016.png'/><br><b>Claude E. Shannon</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.013.png'/><br><b>Harwell CADET (1953) - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.014.png'/><br><b>Die of Intel Pentium P54C - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.015.png'/><br><b>Binary Code</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.016.png'/><br><b>IBM 704 - cs.princeton.edu</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.017.png'/><br><b>IBM 704 Operator Console - computer-history.info</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.018.png'/><br><b>IBM 704 in use - flickr.com</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.019.png'/><br><b>Die of Core Memory ca. 1965 - uh.edu</b></div>
-
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.020.png'/><br><b>ENIAC programmers ca. 1946 - computerhistory.org</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.020.png'/><br><b>ENIAC programmers ca. 1946 - computerhistory.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.021.png'/><br><b>Programming the IBM 650 - wikipedia.org</b></div>
 
@@ -90,9 +92,45 @@
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.025.png'/><br><b>Python code - irawd.wordpress.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.026.png'/><br><b>SuperCollider code - warwick.ac.uk</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.017.png'/><br><b>The Nervous System, including the Central Nervous System (CNS) and the Peripheral Nervous System (PNS)</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.018.png'/><br><b>Brain depicted as digital autonomous system</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.027.png'/><br><b>SuperCollider GUI - supercollider.github.io</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.019.png'/><br><b>Dual-process theories of cognitive  functioning, goal structures of System 1 and 2, Stanovic (2005)</b></div>
 
-<p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar1/seminar1.028.png'/><br><b>Live Coding in SuperCollider - lighthouse.org.uk</b></div>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.020.png'/><br><b>TASS modules, Stanovic (2005)</b></div>
 
-<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp</a><br>link::Cyborg/Seminars/Introduction to Cyborg Music::<br>sc version: 3.8.0</div></div></body></html>
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.021.png'/><br><b>Genetic and vehicle goal overlap in TASS and Analitic System, Stanovic (2005)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.022.png'/><br><b> Tri-process theory, individual differences in the tripartite structure, Stanovic (2009)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.023.png'/><br><b>Markovits and Nantel (1989); Sá et al. (1999); Stanovich and West (1998c)</b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.024.png'/></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.025.png'/></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.026.png'/><br><b>Feminist Cyborg</b></div>
+<div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.027.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.028.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.029.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.030.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.031.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.032.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.033.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.034.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.035.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.036.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.037.png'/><br><b></b></div>
+
+<p><div class='image'><img src='http://www.squib-box.com/fr/cyborg/seminars/seminar1/seminar1.038.png'/><br><b></b></div>
+<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Seminars/Introduction to Cyborg Music.schelp</a><br>link::Cyborg/Seminars/Introduction to Cyborg Music::<br>sc version: 3.8.0</div></div></body></html>
